--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,32 @@
 server.port=8080
 server.servlet.context-path=/
 
+# Bean \u76F8\u540C\u7684\u540D\u5B57\u5141\u8BB8\u8986\u76D6\u6CE8\u518C
+# spring.main.allow-bean-definition-overriding=true
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/irs?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+
+mybatis.config-location=classpath:mybatis-config.xml
+mybatis.mapper-locations=classpath:/cn/chao/maven/mapper/*Mapper.xml
+mybatis.type-aliases-package=cn.chao.maven.entity
+
+logging.level.cn.chao.maven.controller=debug
+logging.level.cn.chao.maven=info
+
+########################################################
+### Java Persistence Api
+########################################################
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+#[org.hibernate.cfg.ImprovedNamingStrategy              #org.hibernate.cfg.DefaultNamingStrategy]
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
