--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,17 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/irs?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+# \u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters\uFF0C\u53BB\u6389\u540E\u76D1\u63A7\u754C\u9762sql\u65E0\u6CD5\u7EDF\u8BA1\uFF0C'wall'\u7528\u4E8E\u9632\u706B\u5899
+spring.datasource.filters=stat,wall,log4j
+# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+# \u4E3B\u6570\u636E\u6E90\uFF0C\u9ED8\u8BA4\u7684
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:/cn/chao/maven/mapper/*Mapper.xml
 mybatis.type-aliases-package=cn.chao.maven.entity
+
 
 logging.level.root=info
 logging.level.cn.chao.maven=debug
@@ -40,5 +47,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
