--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8080
 server.servlet.context-path=/
 
+# tomcat ƒ¨»œ≈‰÷√æÕ « UTF-8
+#server.tomcat.uri-encoding=UTF-8
+
 # Bean \u76F8\u540C\u7684\u540D\u5B57\u5141\u8BB8\u8986\u76D6\u6CE8\u518C
 # spring.main.allow-bean-definition-overriding=true
 
@@ -49,3 +52,23 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
+
+## Redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.timeout=1000
+spring.redis.database=0
+spring.redis.jedis.pool.max-active=10
+spring.redis.jedis.pool.max-idle=8
+#redis:
+#host: 192.168.68.166
+#port: 6379
+#password: studyjava
+#timeout: 1000
+#database: 0
+#pool:
+#max-active: 10
+#max-idle: 8
+#min-idle: 2
+#max-wait: 100
