Spring Boot 笔记的更新。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,10 @@ mybatis.mapper-locations=classpath:/cn/chao/maven/mapper/*Mapper.xml
 mybatis.type-aliases-package=cn.chao.maven.entity
 
 
-logging.level.root=info
+logging.level.root=debug
 logging.level.cn.chao.maven=debug
+
+spring.jmx.enabled=false
 
 ########################################################
 ### Java Persistence Api
