--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 server.servlet.context-path=/
 
-# tomcat ƒ¨»œ≈‰÷√æÕ « UTF-8
+# tomcat  \u9ED8\u8BA4\u7684\u7F16\u7801\u65B9\u5F0F\u5C31\u662F UTF-8
 #server.tomcat.uri-encoding=UTF-8
 
 # Bean \u76F8\u540C\u7684\u540D\u5B57\u5141\u8BB8\u8986\u76D6\u6CE8\u518C
@@ -23,10 +23,10 @@ mybatis.mapper-locations=classpath:/cn/chao/maven/mapper/*Mapper.xml
 mybatis.type-aliases-package=cn.chao.maven.entity
 
 
-logging.level.root=debug
+logging.level.root=info
 logging.level.cn.chao.maven=debug
-
-spring.jmx.enabled=false
+# \u65B0\u589E\u65E5\u5FD7\u6587\u4EF6\uFF0C\u7531\u4E8E\u6BCF\u6B21\u542F\u52A8\u90FD\u6709\u65E5\u5FD7\u751F\u6210\uFF0C\u5F80\u540E\u7684\u63D0\u4EA4\u8FC7\u7A0B\u4E2D\u4E3A\u4E86\u4E0D\u5360\u7528\u66F4\u591A\u7684\u7A7A\u95F4\u3002\u5220\u9664\u65F6\u9700\u8981\u5173\u95ED\u9879\u76EE\uFF0C\u5426\u5219\u4F1A\u5220\u9664\u5931\u8D25\uFF0C\u7CFB\u7EDF\u5360\u7528\u3002
+#logging.file=system.log
 
 ########################################################
 ### Java Persistence Api
