--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <!-- 依赖子项目 -->
+    <modules>
+        <module></module>
+    </modules>
+
     <dependencies>
         <!-- Spring Boot 的监控 ，spring-boot-starter-actuator -->
         <dependency>
